--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pdf2image==1.16.3
 python-multipart==0.0.6
 pillow==10.1.0
 pydantic==2.4.2
+pydantic-settings==2.0.3
 python-dotenv==1.0.0
 pytest==7.4.3
 httpx==0.25.1 
